<resources>
    <string name="titleData">Database</string>
    <string name="titleSetting">Setting</string>
    <string name="dlgTitleDate">Choose date</string>
    <string name="dlgTitleTime">Choose time</string>
    <string name="dlgTitleDatePeriod">Choose date range</string>
    <string name="lbTo">To</string>
    <string name="titleLicenseExpire">%s is unlicensed, go to Google Play to purchase.</string>
    <string name="btnConfirm">Confirm</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnOk">OK</string>
    <string name="btnRate">Rate</string>
    <string name="btnClear">Clear</string>
    <string name="btnEmail">Email</string>
    <string name="btnDelete">Delete</string>
    <string name="btnSave">Save</string>
    <string name="btnBack">Back</string>
    <string name="btnClose">Close</string>
    <string name="app_name">W&amp;O POS</string>
    <string name="companyEmail">androidapplicationhk@gmail.com</string>
    <string name="companyUrl">http://www.androidappshk.com</string>
    <string name="msgShare">"Check out W&amp;O POS!

 https://play.google.com/store/apps/details?id=com.aadhk.restpos"</string>
    <string name="payUrl">details?id=com.aadhk.restpos.pay</string>
    <string name="menuUpgrade">Purchase</string>
    <string name="titleUpgrade">Purchase</string>
    <string name="pleasePurchase">Please purchase!</string>
    <string name="msgIAStartFail">In-app billing is not supported by your device</string>
    <string name="prefAutoBackupTitle">Auto Backup DB to SD Card</string>
    <string name="prefAutoBackupSummary">Auto backup database to SD card before exit app</string>
    <string name="prefAutoBackupDropBoxTitle">Auto Backup DB to Dropbox™</string>
    <string name="prefAutoBackupDropBoxSummary">Auto backup database to Dropbox™ before exit app</string>
    <string name="prefLinkDropBoxTitle">Link with Dropbox™</string>
    <string name="prefLinkDropBoxSummary">Link the app with your Dropbox™ account</string>
    <string name="prefUnlinkDropBoxTitle">Unlink with Dropbox™</string>
    <string name="prefUnlinkDropBoxSummary">Unlink the app with your Dropbox™ account</string>
    <string name="prefBackupTitle">Backup Database</string>
    <string name="prefBackupSummary">Backup database to SD Card, Dropbox™ or Google™ Drive</string>
    <string name="prefEmailDbTitle">Email Database</string>
    <string name="prefEmailDbSummary">Email your current database</string>
    <string name="prefAutoDeleteTitle">Auto Delete Old Transactions</string>
    <string name="prefAutoDeleteSummary">Auto delete old transaction when exit app</string>
    <string name="prefAutoDeleteDialog">Choose keeping period</string>
    <string name="prefRestoreTitle">Restore Database</string>
    <string name="prefRestoreSummary">Restore database from SD Card, Dropbox™ or Google™ Drive</string>
    <string name="prefDeleteAllTitle">Delete All Records</string>
    <string name="prefDeleteAllSummary">Delete all records from database</string>
    <string name="prefLangTitle">Languages</string>
    <string name="prefTitleDate">Date Format</string>
    <string name="prefTranslatorTitle">Translators</string>
    <string name="prefTranslatorSummary">Not your language, email to help us</string>
    <string name="prefRegisterTitle">Register</string>
    <string name="menuLog">Log</string>
    <string name="prefLogTitle">Change Log</string>
    <string name="prefLogSummary">v%1$s</string>
    <string name="appInfo">App info</string>
    <string name="emailSubjectDatabase">%s - Database</string>
    <string name="msgRestoreSdConfirm">Choose one of backup files. Make sure the backup file is the latest.</string>
    <string name="msgNoBackupDatabase">Do not find backup database file.</string>
    <string name="dbBackupSucessMsg">Database is successfully saved to</string>
    <string name="dbBackupFailMsg">Database backup fail to</string>
    <string name="dbRestoreSucessMsg">Restore database success</string>
    <string name="dbRestoreFailMsg">Restore database failure</string>
    <string name="dbDeleteAllSucessMsg">Database is deleted successfully</string>
    <string name="dbDeleteAllFailMsg">Database is deleted fail</string>
    <string name="dbDeleteAllAlertTitle">Database delete all</string>
    <string name="dbDeleteAllAlertMsg">All the saved data entries will be removed from database. Do you really want to do it?</string>
    <string name="dbNoDatabaseMsg">Database has not created yet</string>
    <string name="msgBackuping">Backuping...</string>
    <string name="msgRestoring">Restoring...</string>
    <string name="msgGenratingPDF">Generating PDF...</string>
    <string name="msgLoading">Loading data...</string>
    <string name="msgRestoreDropboxUnlink">Please link the app to Dropbox™ before restore</string>
    <string name="msgBackupDropboxUnlink">Please link the app to Dropbox™ before backup</string>
    <string name="msgAutoBackupDropboxUnlink">Please link the app to Dropbox™ before enable auto backup</string>
    <string name="msgUnlinkDropbox">The app is unlinked to Dropbox™</string>
    <string name="msgLinkDropbox">"Link the app with Dropbox™.
 Please go to next screen to setup Dropbox™ link.
 You need to have Dropbox™ account and install Dropbox™ app 

 You can turn on automatically/manually backup database to your Dropbox™
 For more information, please visit www.dropbox.com"</string>
    <string name="msgBackupDBSuccess">Backup database success.</string>
    <string name="msgBackupDBFail">Backup database failure.</string>
    <string name="msgRestoreConfirm">Please make sure the backup file is the latest. Otherwise, you may lose the newly saved data on the device.</string>
    <string name="msgLinkDropboxFail">Link to Dropbox™ failure.</string>
    <string name="dbBackupChoose">Where to backup database file?</string>
    <string name="dbRestoreChoose">Where restore database file from?</string>
    <string name="msgFileNotFound">File not found at</string>
    <string name="networkMsgChecking">Make sure your Internet is connected!</string>
    <string name="turnOnWifi">Turn on your WIFI!</string>
    <string name="empty">No Records</string>
    <string name="errorEmpty">Cannot be empty</string>
    <string name="errorKey">Register code error</string>
    <string name="emailChooser">Send Email Using:</string>
    <string name="msgNoPdfReader">Cannot find pdf reader, install pdf reader and try again.</string>
    <string name="appRateTitle">Rate %s</string>
    <string name="appRateMessage">If you enjoy using %s, please take a moment to rate it. Thanks for your support!</string>
    <string name="appRatePositive">Rate it !</string>
    <string name="appRateNeutral">Remind later</string>
    <string name="appRateNegative">No thanks</string>
    <string name="digits">0123456789</string>
    <string name="digitsPoint">0123456789.</string>
    <string name="digitsHex">0123456789abcdef,</string>
    <string name="menuBackupSdcard">SD Card(keep 3 copies)</string>
    <string name="menuSdcard">SD Card</string>
    <string name="menuDropbox">Dropbox™</string>
    <string name="menuGoogleDrive">Google™ Drive</string>
    <string name="lbCurrencyCode">Code</string>
    <string name="lbCurrencySign">Sign</string>
    <string name="lbCurrencyDesc">Description</string>
    <string name="titleCurrency">Currency</string>
    <string name="titleCurrencyUpdate">Update currency</string>
    <string name="titleCurrencyAdd">Add currency</string>
    <string name="en">English</string>
    <string name="tw">中文(繁體)</string>
    <string name="de">Deutsch</string>
    <string name="it">Italiano</string>
    <string name="pt_BR">Português(Brasileiro)</string>
    <string name="fr">Français</string>
    <string name="da">Dansk</string>
    <string name="bs">Bosanski</string>
    <string name="nl">Nederlands</string>
    <string name="es">Español</string>
    <string name="no">Norsk</string>
    <string name="el">Ελληνικά</string>
    <string name="cn">中文(简体)</string>
    <string name="hu">Magyar</string>
    <string name="textFileName">File Name:</string>
    <string name="textHintFileName">Input File Name</string>
    <string name="createFile">Create File</string>
    <string name="btnRegister">Register</string>
    <string name="btnBuy">Buy</string>
    <string name="btnKey">License</string>
    <string name="menuPurchase">Purchase</string>
    <string name="msgBilInApp">The trial version has expired, Please buy to continue using.</string>
    <string name="msgPurchaseSucc">Thank you to support us.</string>
    <string name="msgPurchaseFail">Purchase fail, check Google Purchase.</string>
    <string name="dlgTitleRegistration">App Registration</string>
    <string name="dlgTitleRegisted">Registed</string>
    <string name="msgExpire">"App Serial ID: %s 
The trial version has expired. Please purchase or register license key to continue using this app."</string>
    <string name="msgExpireWithoutTrial">Please buy and register license key to us this app.</string>
    <string name="dlgTitleRegistrationTry">Wrong license, try again</string>
    <string name="registerContent">"To register the app with your device, enter license key .
To buy the pay version, click buy to pay version link. 
To order a license key, send email to us with serial ID %s."</string>
    <string name="titleDelivery">Delivery</string>
    <string name="lbApt">Apartment</string>
    <string name="hintApt">Apartment number</string>
    <string name="lbStreet">Street</string>
    <string name="lbCity">City</string>
    <string name="menuReportCash">Last Close Out</string>
    <string name="menuPaying">Pay In</string>
    <string name="menuPayOut">Pay Out</string>
    <string name="menuCash">Cash</string>
    <string name="titleCloseOut">Cash Close Out</string>
    <string name="titleCashDrawer">Drawer</string>
    <string name="menuLogout">Logout</string>
    <string name="lbSubTotal">Subtotal:</string>
    <string name="lbDiscount">Discount:</string>
    <string name="reportTitle">Report</string>
    <string name="receiptTitle">Receipt</string>
    <string name="lbPerSign">%</string>
    <string name="menuMonth">Monthly</string>
    <string name="menuWeek">Weekly</string>
    <string name="menuDay">Daily</string>
    <string name="menuCustom">Custom</string>
    <string name="btnCheckOut">Payment</string>
    <string name="lbAmountM">Amount:</string>
    <string name="lbRemaining">Remaining:</string>
    <string name="dlgSplitBill">Split bill</string>
    <string name="btnEqual">Equal Bill</string>
    <string name="btnOne">No Split</string>
    <string name="btnAddBill">Add Bill</string>
    <string name="prefNewRestaurantTitle">Clean to New Restaurant</string>
    <string name="prefNewRestaurantSummary">Delete all data of table, category, item, modifier, price schedule, customer, and order</string>
    <string name="prefDeleteAllOrderTitle">Delete Orders</string>
    <string name="prefDeleteAllOrderSummary">Delete all orders from database</string>
    <string name="prefRestoreDemoTitle">Restore Sample Database</string>
    <string name="prefRestoreDemoSummary">Restore sample restaurant</string>
    <string name="lbDiscountReason">Reason:</string>
    <string name="lbTweentyOff">20% off</string>
    <string name="lbFifteenOff">15% off</string>
    <string name="lbTenOff">10% off</string>
    <string name="customerName">Name</string>
    <string name="customerTel">Tel</string>
    <string name="msgCustomerName">Customer name</string>
    <string name="lbPhoneNum">Phone number</string>
    <string name="lbEmailAddress">Email address</string>
    <string name="lbPercentage">Percentage</string>
    <string name="lbAmount">Amount</string>
    <string name="psHintDisAmt">Discount amount</string>
    <string name="lbTakeout">Takeout</string>
    <string name="lbEmail">Email</string>
    <string name="btnNoDiscount">No Discount</string>
    <string name="titleOrderlist">Orders</string>
</resources>