<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/last_closeout" android:id="@id/menu_report_cash" android:title="@string/menuReportCash" app:showAsAction="always|withText" />
    <item android:icon="@drawable/import_item" android:id="@id/menu_paying" android:title="@string/menuPaying" app:showAsAction="always|withText" />
    <item android:icon="@drawable/export" android:id="@id/menu_payout" android:title="@string/menuPayOut" app:showAsAction="always|withText" />
    <item android:icon="@drawable/closeout" android:id="@id/menu_closeout" android:title="@string/titleCloseOut" app:showAsAction="ifRoom|withText" />
    <item android:id="@id/menu_month" android:title="@string/menuMonth" app:showAsAction="never" />
    <item android:id="@id/menu_week" android:title="@string/menuWeek" app:showAsAction="never" />
    <item android:id="@id/menu_day" android:title="@string/menuDay" app:showAsAction="never" />
    <item android:id="@id/menu_custom" android:title="@string/menuCustom" app:showAsAction="never" />
</menu>