<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/bg_gray" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:windowSoftInputMode="stateHidden|adjustResize">
        <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:id="@id/l3" android:paddingLeft="8.0dip" android:paddingTop="16.0dip" android:paddingRight="8.0dip" android:paddingBottom="48.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:gravity="right|center" android:orientation="vertical" android:id="@id/l2" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent">
                    <TextView android:textSize="@dimen/customer_layout_size" android:textColor="@color/textDarkGray" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/customerTel" android:layout_weight="1.0" />
                    <TextView android:textSize="@dimen/customer_layout_size" android:textColor="@color/textDarkGray" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/customerName" android:layout_weight="1.0" />
                    <TextView android:textSize="@dimen/customer_layout_size" android:textColor="@color/textDarkGray" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbApt" android:layout_weight="1.0" />
                    <TextView android:textSize="@dimen/customer_layout_size" android:textColor="@color/textDarkGray" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbStreet" android:layout_weight="1.0" />
                    <TextView android:textSize="@dimen/customer_layout_size" android:textColor="@color/textDarkGray" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbCity" android:layout_weight="1.0" />
                    <TextView android:textSize="@dimen/customer_layout_size" android:textColor="@color/textDarkGray" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbEmail" android:layout_weight="1.0" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/l1" android:paddingLeft="6.0dip" android:paddingRight="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_toRightOf="@id/l2">
                    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                        <EditText android:textSize="@dimen/customer_layout_size" android:id="@id/customerTel" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:hint="@string/lbPhoneNum" android:singleLine="true" android:maxLength="20" android:digits="@string/digits" android:phoneNumber="true" android:layout_weight="1.0" android:inputType="phone" />
                    </LinearLayout>
                    <EditText android:textSize="@dimen/customer_layout_size" android:id="@id/customerName" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/msgCustomerName" android:singleLine="true" android:maxLength="20" android:layout_weight="1.0" />
                    <EditText android:textSize="@dimen/customer_layout_size" android:id="@id/customerApt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:hint="@string/hintApt" android:singleLine="true" android:maxLength="45" android:layout_weight="1.0" />
                    <EditText android:textSize="@dimen/customer_layout_size" android:id="@id/customerStreet" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:hint="@string/lbStreet" android:singleLine="true" android:maxLength="45" android:layout_weight="1.0" />
                    <EditText android:textSize="@dimen/customer_layout_size" android:id="@id/customerCity" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:hint="@string/lbCity" android:singleLine="true" android:maxLength="45" android:layout_weight="1.0" />
                    <EditText android:textSize="@dimen/customer_layout_size" android:id="@id/customerEmail" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="6.0dip" android:hint="@string/lbEmailAddress" android:singleLine="true" android:maxLength="30" android:layout_weight="1.0" android:inputType="textEmailAddress" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true">
            <LinearLayout android:orientation="horizontal" android:paddingTop="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:textSize="@dimen/customer_layout_size" android:id="@id/btnSave" android:layout_width="wrap_content" android:text="@string/btnSave" android:layout_weight="1.0" style="@style/buttonRed" />
                <Button android:textSize="@dimen/customer_layout_size" android:id="@id/btnDelete" android:layout_width="wrap_content" android:text="@string/btnDelete" android:layout_weight="1.0" style="@style/buttonGreen" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>