<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:id="@id/footer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:layout_alignParentBottom="true">
        <Button android:id="@id/btnPayment" android:layout_width="0.0dip" android:text="@string/btnCheckOut" android:layout_weight="1.0" style="@style/buttonRed" />
        <Button android:id="@id/btnEqual" android:layout_width="0.0dip" android:text="@string/btnEqual" android:layout_weight="1.0" style="@style/buttonRed" />
        <Button android:id="@id/btnAdd" android:layout_width="0.0dip" android:text="@string/btnAddBill" android:layout_weight="1.0" style="@style/buttonGreen" />
        <Button android:id="@id/btnOne" android:layout_width="0.0dip" android:text="@string/btnOne" android:layout_weight="1.0" style="@style/buttonOrange" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/header" android:paddingLeft="2.0dip" android:paddingRight="2.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/footer">
        <View android:background="@*android:color/white" android:layout_width="fill_parent" android:layout_height="0.100000024dip" />
        <LinearLayout android:gravity="center_vertical" android:id="@id/linearLayout1" android:layout_width="fill_parent" android:layout_height="42.0dip">
            <LinearLayout android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textColor="@color/textWhite" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="3.0dip" android:text="@string/lbAmountM" />
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/textWhite" android:id="@id/valTotal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="$5" />
            </LinearLayout>
            <LinearLayout android:gravity="right" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textColor="@color/textWhite" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="3.0dip" android:text="@string/lbRemaining" />
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/textWhite" android:id="@id/valRemaining" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="$5" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_above="@id/header">
        <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/text_title_color" android:gravity="center_vertical" android:id="@id/tvTitle" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/dlgSplitBill" />
        <View android:background="@drawable/summary_focus" android:layout_width="fill_parent" android:layout_height="6.0dip" />
        <TextView android:textSize="18.0sp" android:textColor="@drawable/textcolor_white" android:gravity="center" android:id="@id/valEmpty" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/empty" />
        <ListView android:id="@*android:id/list" android:layout_width="fill_parent" android:layout_height="0.0dip" android:drawSelectorOnTop="false" android:cacheColorHint="@drawable/bg_content" android:divider="@drawable/divider_list" android:dividerHeight="0.100000024dip" android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>