<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/background" android:paddingTop="2.0dip" android:layout_width="@dimen/dialog_width" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:background="@drawable/bg_title" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:textColor="@color/txtDialogTitle" android:id="@id/dlgTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Text" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/content" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0">
            <TextView android:textColor="@color/white" android:text="@string/lbSubTotal" style="@style/transactionLeftColumn" />
            <TextView android:textSize="18.0sp" android:textColor="@color/black" android:id="@id/tvSubtotal" style="@style/transactionRightColumn" />
        </LinearLayout>
        <LinearLayout android:paddingTop="0.100000024dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0">
            <TextView android:textColor="@color/white" android:text="@string/lbDiscount" style="@style/transactionLeftColumn" />
            <TextView android:gravity="center_vertical" android:background="@drawable/bg_edittext" android:paddingLeft="4.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="%" />
            <EditText android:textSize="14.0sp" android:id="@id/edtDiscountPer" android:layout_marginRight="0.100000024dip" android:maxLength="3" android:inputType="numberDecimal" style="@style/transactionRightColumn" />
            <TextView android:gravity="center_vertical" android:id="@id/tvSign" android:background="@drawable/bg_edittext" android:paddingLeft="4.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="$" />
            <EditText android:textSize="14.0sp" android:id="@id/edtDiscountAmount" android:maxLength="5" android:inputType="numberDecimal" style="@style/transactionRightColumn" />
        </LinearLayout>
        <LinearLayout android:paddingTop="0.100000024dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0">
            <TextView android:textColor="@color/white" android:text="@string/lbDiscountReason" style="@style/transactionLeftColumn" />
            <EditText android:textStyle="normal" android:id="@id/edtDiscountReason" android:inputType="textCapSentences" style="@style/transactionRightColumn" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/vl1" android:paddingTop="0.100000024dip" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <Button android:textSize="14.0sp" android:id="@id/btnNoDiscount" android:background="@drawable/bg_btn_number" android:layout_width="fill_parent" android:layout_height="fill_parent" android:text="@string/btnNoDiscount" android:layout_weight="1.0" />
            <Button android:textSize="14.0sp" android:id="@id/btnTenOff" android:background="@drawable/bg_btn_number" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="0.100000024dip" android:text="@string/lbTenOff" android:layout_weight="1.0" />
            <Button android:textSize="14.0sp" android:id="@id/btnFifteenOff" android:background="@drawable/bg_btn_number" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="0.100000024dip" android:text="@string/lbFifteenOff" android:layout_weight="1.0" />
            <Button android:textSize="14.0sp" android:id="@id/btnTweentyOff" android:background="@drawable/bg_btn_number" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginLeft="0.100000024dip" android:text="@string/lbTweentyOff" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:id="@id/footer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="1.0dip" android:layout_below="@id/vl1">
        <Button android:id="@id/btnConfirm" android:layout_width="0.0dip" android:text="@string/btnConfirm" android:layout_weight="0.5" style="@style/buttonRed" />
        <Button android:id="@id/btnCancel" android:layout_width="0.0dip" android:text="@string/btnCancel" android:layout_weight="0.5" style="@style/buttonBlue" />
    </LinearLayout>
</LinearLayout>