<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/bg_dialog" android:layout_width="300.0dip" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/linearLayout2" android:background="@drawable/bg_title" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:textColor="@color/txtDialogTitle" android:id="@id/dlgTitle" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="Text" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/linearLayout2" android:padding="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:id="@id/fieldValue" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="13" android:inputType="numberDecimal" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:id="@id/linearLayout1" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:id="@id/btnConfirm" android:layout_width="wrap_content" android:text="@string/btnConfirm" android:layout_weight="1.0" style="@style/buttonRed" />
        <Button android:id="@id/btnDelete" android:layout_width="wrap_content" android:text="@string/btnDelete" android:layout_weight="1.0" style="@style/buttonGreen" />
        <Button android:id="@id/btnCancel" android:layout_width="wrap_content" android:text="@string/btnCancel" android:layout_weight="1.0" style="@style/buttonBlue" />
    </LinearLayout>
</LinearLayout>